- 优化操作鼠标间隔